package yandex.maps.proto.search.kind;

option optimize_for = LITE_RUNTIME;

enum Kind
{
    // administrative hierarchy
    COUNTRY = 0;
    REGION = 1;
    PROVINCE = 2;
    AREA = 3;
    LOCALITY = 4;
    DISTRICT = 5;
    STREET = 6;
    HOUSE = 7;

    // railways, metro lines, etc
    ROUTE = 8;
    STATION = 9;
    METRO_STATION = 10;
    RAILWAY_STATION = 11;

    // miscelannea
    VEGETATION = 12;
    HYDRO = 13;
    AIRPORT = 14;
    OTHER = 15;
}

enum BitFieldEnum
{
    ONE = 1;
    TWO = 2;
    FOUR = 4;
    EIGHT = 8;
}

message ProtoSt
{
    required int32 proto_i = 1;
    optional string class = 2;
    repeated CustomHeaderMessage messages = 3;
    required CustomMessage customMessage = 4;
    optional bool flag = 5 [default = false];
}

message CustomHeaderMessage
{
    optional string s = 1;
    repeated int32 r = 2;
}

message CustomConvMessage
{
    optional int32 custom_int = 1;
}

message CustomMessage
{
    required int32 i = 1;
    required float f = 2;
}
